--- a/Index.html
+++ b/Index.html
@@ -1,6 +1,7 @@
 <html>
 <head> <title> Mecanicos Creyentes </title> </head>
 <body style="background-color:#000000;">
-<marquee direction="LEFT"> <img height="259" border="7" width="199" src="https://github.com/SebbsLZ666/InforTraba/issues/6#issue-450961130" </marquee>
+<marquee direction="LEFT"> <img height="259" border="7" width="199" src="![Melon](https://user-images.githubusercontent.com/50216947/58732059-06083b00-83b6-11e9-8fdf-9af5b8297596.jpg)
+" </marquee>
 <font Color="#0E33DA face="Arial"> <h1> Hola! Bienvenidos a nuestra pagina "Mecanicos creyentes" </font> </h1> </body>
 https://github.com/SebbsLZ666/InforTraba/issues/6#issue-450961130
