--- a/Index.html
+++ b/Index.html
@@ -5,3 +5,4 @@
 " </marquee>
 <font Color="#0E33DA face="Arial"> <h1> Hola! Bienvenidos a nuestra pagina "Mecanicos creyentes" </font> </h1> </body>
 https://github.com/SebbsLZ666/InforTraba/issues/6#issue-450961130
+                                                                                               </html>
